@@ -153,6 +153,8 @@ Deprecated Functionality
 
 - ``BroType::YieldType()`` is deprecated, use ``BroType::Yield()``.
 
+- ``ID::AsType()`` is deprecated, use ``ID::IsType()`` and ``ID::GetType()``.
+
 Zeek 3.1.0
 ==========
 
